--- a/Warbud.Users.Application/Warbud.Users.Application.csproj
+++ b/Warbud.Users.Application/Warbud.Users.Application.csproj
@@ -5,7 +5,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\Warbud.Shared\Warbud.Shared.csproj" />
+      <ProjectReference Include="..\..\Warbud.Shared\Warbud.Shared\Warbud.Shared.csproj" />
       <ProjectReference Include="..\Warbud.Users.Domain\Warbud.Users.Domain.csproj" />
     </ItemGroup>
 
