--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   build:
-    runs-on: [windows-latest, ubuntu-18.04 ]
+    runs-on: [windows-latest]
 
     steps:
       - uses: actions/checkout@v2
