--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,10 +16,10 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Print 1
-        run: 
-        - dir 
-        - cd ..
-        - dir
+        run: |
+          dir
+          cd ..
+          dir
 
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1.9.0
@@ -30,10 +30,10 @@ jobs:
         run: git clone https://github.com/Nairda015/Warbud.Shared
 
       - name: Print 2
-        run: 
-        - dir 
-        - cd ..
-        - dir
+        run: |
+          dir
+          cd ..
+          dir
       
       - name: Restore Packages
         run: dotnet restore
