--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,24 +15,15 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Print 1
-        run: |
-          dir
-          cd ..
-          dir
-
       - name: Setup .NET Core SDK
         uses: actions/setup-dotnet@v1.9.0
         with:
           dotnet-version: 5.0.x 
       
       - name: Clone shared repository
-        run: git clone https://github.com/Nairda015/Warbud.Shared
-
-      - name: Print 2
-        run: |
-          dir
+        run: | 
           cd ..
+          git clone https://github.com/Nairda015/Warbud.Shared
           dir
       
       - name: Restore Packages
