--- a/Warbud.Users.Api/Warbud.Users.Api.csproj
+++ b/Warbud.Users.Api/Warbud.Users.Api.csproj
@@ -8,6 +8,8 @@
     <ItemGroup>
       <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.4" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="5.0.11" />
+      <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.13" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.10">
         <PrivateAssets>all</PrivateAssets>
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
