--- a/Warbud.Users.Application/Warbud.Users.Application.csproj
+++ b/Warbud.Users.Application/Warbud.Users.Application.csproj
@@ -10,7 +10,8 @@
     </ItemGroup>
 
     <ItemGroup>
-      <PackageReference Include="HotChocolate.Types" Version="11.3.7" />
+      <PackageReference Include="FluentValidation" Version="10.3.4" />
+      <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.10" />
     </ItemGroup>
 
