--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,10 +9,51 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build_and_test:
+    # containers must run in Linux based operating systems
     runs-on: [windows-latest]
+    # Docker Hub image that `postgres-job` executes in
+    container: node:latest
+
+    # service containers to run with `postgres-job`
+    services:
+      # label used to access the service container
+      postgres:
+        # Docker Hub image
+        image: postgres:latest
+        # service environment variables
+        # `POSTGRES_HOST` is `postgres`
+        env:
+          # required
+          POSTGRES_PASSWORD: 1234
+          # optional (defaults to `5432`)
+          POSTGRES_PORT: 5432
+          # optional (defaults to `postgres`)
+          POSTGRES_USER: Adrian
+        ports:
+          # maps tcp port 5432 on service container to the host
+          - 5432:5432
+        # set health checks to wait until postgres has started
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
 
     steps:
+#       - name: Install PostgreSQL client
+#         run: |
+#           apt-get update
+#           apt-get install --yes postgresql-client
+
+#       # queries database with postgres client
+#       - name: Query database
+#         run: psql -h postgres -d postgres_db -U postgres_user -c 'SELECT 1;'
+#         env:
+#           # postgress password is required; alternatively, you can run:
+#           # `PGPASSWORD=postgres_password psql ...`
+#           PGPASSWORD: postgres_password
+
       - uses: actions/checkout@v2
 
       - name: Setup .NET Core SDK
@@ -31,6 +72,12 @@ jobs:
       
       - name: Build
         run: dotnet build -c Release  --no-restore
+      
+      - name: run migrations
+        run: |
+          dir
+          cd Warbud.Users.Infrastructure
+          dotnet ef migrations add Init -s ../Warbud.Users.Api -c WriteDbContext        
       
       - name: Test
         run: dotnet test -c Release
