--- a/Warbud.Users.Api/appsettings.Development.json
+++ b/Warbud.Users.Api/appsettings.Development.json
@@ -3,17 +3,17 @@
     "JwtKey": "my-32-character-ultra-secure-and-ultra-long-secret",
     "JwtExpireSeconds": 6000,
     "JwtIssuer": "https://localhost:5001/",
-    "ClockSkew": 5
+    "ClockSkew": 30
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.EntityFrameworkCore.Database.Command": "Information"
-    },
-    "ConnectionStrings": {
-      "WarbudUserCS": "User ID = Adrian; Password = 1234 ; Server = localhost; Port = 5432; Database = WarbudUsersDb; Integrated Security = true; Pooling = true;"      
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  }
+  },
+  "Postgres": {
+    "ConnectionString": "User ID = Adrian; Password = 1234 ; Server = postgres; Port = 5432; Database = WarbudDb; Integrated Security = true; Pooling = true;"
+  },
+  "AllowedHosts": "*"
 }
