--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -84,3 +84,8 @@ jobs:
       
       - name: Test
         run: dotnet test -c Release
+        env:
+          # The hostname used to communicate with the PostgreSQL service container
+          POSTGRES_HOST: localhost
+          # The default PostgreSQL port
+          POSTGRES_PORT: 5432
