--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -89,3 +89,5 @@ jobs:
           POSTGRES_HOST: localhost
           # The default PostgreSQL port
           POSTGRES_PORT: 5432
+          POSTGRES_PASSWORD: 1234
+          POSTGRES_USER: Adrian
