--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -81,7 +81,7 @@ jobs:
           dir
           cd Warbud.Users.Infrastructure
           dotnet ef migrations add Init -s ../Warbud.Users.Api -c WriteDbContext
-          dotnet ef database update -s ../Warbud.Users -c WriteDbContext
+          dotnet ef database update -s ../Warbud.Users.Api -c WriteDbContext
       
       - name: Test
         run: dotnet test -c Release
