--- a/Warbud.Users.Api/appsettings.json
+++ b/Warbud.Users.Api/appsettings.json
@@ -13,7 +13,7 @@
     }
   },
   "Postgres": {
-    "ConnectionString": "User ID = Adrian; Password = 1234 ; Server = localhost; Port = 5432; Database = WarbudDb; Integrated Security = true; Pooling = true;"
+    "ConnectionString": "User ID = Adrian; Password = 1234 ; Server = postgres; Port = 5432; Database = WarbudDb; Integrated Security = true; Pooling = true;"
   },
   "AllowedHosts": "*"
 }
