--- a/Warbud.Users.Api/appsettings.Development.json
+++ b/Warbud.Users.Api/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Auth": {
     "JwtKey": "my-32-character-ultra-secure-and-ultra-long-secret",
     "JwtExpireSeconds": 6000,
-    "JwtIssuer": "https://localhost:5001/",
+    "JwtIssuer": "http://localhost:1500/",
     "ClockSkew": 30
   },
   "Logging": {
