--- a/Warbud.Users.Api/Warbud.Users.Api.csproj
+++ b/Warbud.Users.Api/Warbud.Users.Api.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
-        <TargetFramework>net5.0</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
@@ -19,6 +20,10 @@
 
     <ItemGroup>
       <ProjectReference Include="..\Warbud.Users.Infrastructure\Warbud.Users.Infrastructure.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Services" />
     </ItemGroup>
 
 </Project>
