--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,7 +66,7 @@ jobs:
           
       - name: Print ConnectionString
         run: | 
-          cd '${{ github.workspace }}/Warbud.Users.Api
+          cd '${{ github.workspace }}/Warbud.Users.Api'
           dir
           cat .\appsettings.json
       
