--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -69,7 +69,7 @@ jobs:
           dir
           cd Warbud.Users.Api
           dir
-          cat .\appsettings.json
+          cat appsettings.json
       
       - name: Build
         run: dotnet build -c Release  --no-restore
