--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -51,9 +51,9 @@ jobs:
       - name: Edit ConnectionString
         run: |           
           cd Warbud.Users.Api
-          sed 's/localhost;/postgres;/g' appsettings.json
+          sed -i 's/localhost;/postgres;/g' appsettings.json
           cat appsettings.json
-          sed 's/localhost;/postgres/g' appsettings.Development.json
+          sed -i 's/localhost;/postgres/g' appsettings.Development.json
           cat appsettings.Development.json
       
       - name: Clone shared repository
