--- a/Warbud.Users.Application/Warbud.Users.Application.csproj
+++ b/Warbud.Users.Application/Warbud.Users.Application.csproj
@@ -6,7 +6,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\Shared\Shared\Shared.csproj" />
       <ProjectReference Include="..\Warbud.Users.Domain\Warbud.Users.Domain.csproj" />
     </ItemGroup>
 
@@ -14,6 +13,7 @@
       <PackageReference Include="FluentValidation" Version="10.3.4" />
       <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.1" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="5.0.10" />
+      <PackageReference Include="Warbud.Shared" Version="1.0.1" />
     </ItemGroup>
 
 </Project>
